--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">header 100px x container-size</div>
+        <div class="header">header container-size x 100px</div>
         <div class="main__content">
             <div class="main__content__item--1">main section 1 70% x half of available height</div>
             <div class="main__content__item--2">main section 2 70% x half of available height</div>
@@ -21,7 +21,7 @@
             <div class="main__sidebar__item--2">sidebar section 2 30% x 1/3 of available height</div>
             <div class="main__sidebar__item--3">sidebar section 3 30% x 1/3 of available height</div>
         </div>
-        <div class="footer">footer 150px x container-size</div>
+        <div class="footer">footer container-size x 150px</div>
     </div>
 </body>
 </html>
